Fix card code and damage alignment

--- a/styles/ModPreview.module.css
+++ b/styles/ModPreview.module.css
@@ -36,8 +36,6 @@
 
 .codes {
   color: #ffff00;
-  display: flex;
-  flex-direction: row;
   gap: 4px;
   overflow: hidden;
 }
@@ -48,8 +46,12 @@
 
 .codes,
 .damage {
+  display: flex;
+  flex-direction: row;
   margin-bottom: -1px;
   margin-top: 2px;
+  max-height: 24px;
+  align-items: center;
 }
 
 .player_element {
